remove unnecessary .container element fixes a bug with the site margin on small screens

--- a/app/assets/stylesheets/_landing_page.scss
+++ b/app/assets/stylesheets/_landing_page.scss
@@ -63,7 +63,7 @@
   }
 }
 
-.container#benefits {
+#benefits {
   padding-bottom: 2em;
   background-color: #FAFAFA;
   text-align: center;
@@ -102,7 +102,7 @@
   }
 }
 
-.jumbotron#introducing {
+#introducing {
   color: #1E241D;
   background-color: #b1d05f;
   text-align: center;
@@ -133,7 +133,7 @@
   }
 }
 
-.container#quotes {
+#quotes {
   padding-top: 48px;
   padding-bottom: 48px;
 }
